# quantix-rust

./: .dockerignore  .env.example  .env.market.local.example  .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  FUNCTION_TREE.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml
.cargo/: audit.toml  config.toml
.claude/: edit_log.jsonl
.github/workflows/: audit.yml  ci.yml  cleanup.yml  docker.yml
.governance/: README.md  active-gates.json  active-gates.md  profile.md
.governance/guards/: ft-scope-check.sh
.omc/: project-memory.json
.omc/plans/: stock-list-sync.md
.omc/sessions/: 0c355303-0ca2-4eb3-a135-68a36ef62c71.json  24b15b12-b44a-4ca4-b0bf-2c7d62c0fe87.json  69bcee8e-bc9a-4327-b831-2430b123409f.json  805cdded-4cab-4788-8fb5-c4a0f8728aab.json  86eae536-20f4-4723-8159-f01b7389401d.json  c9298aa7-1920-432c-b3b5-7814c00cac07.json
.omc/state/: agent-replay-a0d2abef-eb11-4d4a-a3d0-ee3a97d08e13.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: 2026-04-17-risk-rule-timeout-investigation.md  2026-04-17-risk-timeout-handoff.md  graphiti-mcp-review-stuck.md
.zread/wiki/: current
benches/: bench_main.rs
config/: ai.toml  clippy.toml  default.toml  holidays.json  news.toml  rustfmt.toml  zellij.kdl
config/systemd/: quantix-data-collector.service  quantix-strategy-runner.service  quantix-task-scheduler.service
config/zellij/: config.kdl
db/schema/: quantix_openstock_import_init.sql  quantix_shadow_init.sql
dev/bench/: data.js
docs/: ARCHITECTURE_CLI_ALIGNMENT_PLAN_2026-04-17.md  AUDIT_OPTIMIZATION_PLAN_2026-03-29.md  CLI_COMMAND_MANUAL.html  CLI命令手册优化建议.md  DEVELOPMENT_ROADMAP.md  FUNCTION_MAP.md  GAP_ANALYSIS.md  INDICATOR_PIPELINE_OPTIMIZATION_PLAN.md  MANUAL_TESTING_GUIDE.md  MANUAL_TEST_RESULT_TEMPLATE.md  MIGRATION_FROM_DAILY_STOCK_ANALYSIS.md  MIGRATION_FROM_OPENSTOCK.md  MIGRATION_FROM_QAUTLRA.md  MIGRATION_FROM_SURPRIVER.md  QMT_LIVE_TRADING_SETUP.md  QUICKSTART.md  ROADMAP_REVIEW.md  RUST_CODING_STANDARDS.md  USER_MANUAL.md  opendog-mcp-test-report-2026-05-10.md  缺口和对齐优化建议.md  豆包DS架构设计建议.md
docs/CODE_AUDIT_EVIDENCE/: baseline.md  cargo-gates.md  evidence-manifest.md  findings.csv  gitnexus-queries.md  graphiti-memory.md  manual-review-log.md  pattern-hotspots.md  pattern-scan-summary.csv  sampled-files.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/architecture/: WSL2_WINDOWS_BRIDGE_ARCHITECTURE.md  function-add-next-feasibility-report.md  function-add-next.md
docs/archive/: README.md
docs/contracts/: external-systems.md  review2md-audit-2026-07-11.md
docs/guides/: CLICKHOUSE_MARKET_FUNDAMENTALS_DEBUGGING.md  DIRTY_WORKTREE_CLEANUP_GUIDE.md  DIRTY_WORKTREE_CLEANUP_GUIDE_REVIEW.md  DOCKER_GUIDE.md  GITNEXUS_MCP_DAILY_WORKFLOW_RECOMMENDATIONS.md  GITNEXUS_MCP_WORKFLOW_FOLLOW_UPS.md  GRAPHITI_MCP_WORKFLOW.md  GRAPHITI_UPSTREAM_RATE_LIMIT_RECOMMENDATIONS.md  INFRASTRUCTURE_TOOLS.md  MARKET_STRENGTH_COMMANDS.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_DEPLOYMENT.md  TDX_API_BRIDGE_GUIDE.md  ZELLIJ_GUIDE.md
docs/operations/: DEPLOYMENT.md  MINIQMT_QUANTIX_REGRESSION_OPERATOR_RUNBOOK_2026-05-20.md  QMT_LIVE_CANARY_RUNBOOK_2026-06-22.md
docs/plans/: 2026-03-10-phase21-watchlist-implementation.md  2026-03-11-phase24-monitor-design.md  2026-03-11-phase24-monitor-implementation.md  (+6 more)
hooks/: augment-shell.sh
logs/: market_cli_acceptance_report_20260424_002927.md  market_cli_acceptance_report_20260424_004832.md  market_cli_acceptance_report_20260424_010843.md  market_cli_acceptance_report_20260424_012337.md  market_cli_acceptance_report_20260424_020729.md  market_cli_acceptance_report_20260424_020826.md  market_cli_acceptance_report_20260424_025207.md  market_cli_acceptance_report_20260427_103326.md  market_cli_acceptance_report_20260428_145108.md  market_cli_acceptance_report_20260428_161746.md  market_cli_acceptance_report_20260428_233553.md  market_cli_acceptance_report_20260429_001823.md  market_cli_acceptance_report_20260429_110852.md  market_cli_delivery_gate_report_20260426_123000.md  market_cli_delivery_gate_report_20260429_002008.md  market_minimal_handler_patch_20260424.patch  market_source_resume_20260424.md
monitoring/: alerts.yml  loki.yml  prometheus.yml  promtail.yml
openspec/: config.yaml
scripts/: daily-update.sh  health-check.sh  init-clickhouse.sql  init-postgres.sql  verify_features.sh
src/: lib.rs  main.rs  miniqmt_market.rs  test_support.rs
tests/: account_cli_validation_test.rs  ai_cli_validation_test.rs  algo_cli_validation_test.rs  bridge_client_test.rs  bridge_integration_test.rs  bridge_tdx_source_test.rs  candle_patterns_test.rs  check_market_cli_prereqs_script_test.rs  ci_workflow_structure_test.rs  cli_fail_closed_scan_closure_test.rs  contract_doc_field_sync_test.rs  contract_doc_fixture_sync_test.rs  contract_doc_sync_test.rs  data_export_cli_validation_test.rs  data_validate_fundamentals_cli_test.rs  doctor_market_cli_env_script_test.rs  execution_adapter_capabilities_test.rs  execution_daemon_test.rs  execution_kernel_test.rs  execution_mode_semantics_test.rs  execution_runtime_store_test.rs  factor_pipeline_test.rs  generate_market_cli_acceptance_report_script_test.rs  import_image_cli_validation_test.rs  indicator_pipeline_test.rs  init_market_cli_local_env_script_test.rs  market_cli_acceptance_helper_chain_test.rs  market_cli_error_output_test.rs  market_cli_help_output_more_test.rs  market_cli_help_output_test.rs  market_cli_leader_help_output_test.rs  market_cli_leader_validation_more_test.rs  market_cli_metric_validation_test.rs  market_cli_primary_help_output_test.rs  market_cli_runtime_validation_invalid_date_more_test.rs  market_cli_runtime_validation_output_more_test.rs  market_cli_runtime_validation_output_test.rs  market_cli_success_output_test.rs  market_cli_validation_output_test.rs  market_fundamentals_template_assets_test.rs  (+81 more)
(+1108 files in other folders)
