[package]
name = "quantix-cli"
version = "0.1.0"
edition = "2024"
description = "A股量化交易 CLI 工具 - 与 Python quantix 项目共享数据源和数据库"
authors = ["MyStocks Team"]
repository = "https://github.com/chengjon/quantix-rust"
license = "MIT"

[lib]
name = "quantix_cli"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
dirs = "5.0"
indicatif = "0.17"

# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-cron-scheduler = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "mysql", "chrono", "rust_decimal", "json", "sqlite"] }
# ClickHouse (主存储)
clickhouse = "0.12"
# TDengine (通过 REST API，可选)
taos-ws = { version = "0.5", optional = true }

# HTTP (共享数据源)
reqwest = { version = "0.11", features = ["json", "cookies"] }
urlencoding = "2.1"
url = "2.5"

# WebSocket (实时行情)
tokio-tungstenite = "0.21"
futures = "0.3"
futures-util = "0.3"

# Serialization (与 Python 兼容)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
base64 = "0.22"

# Time & Math (与 Python 兼容)
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde", "db-tokio-postgres"] }
rust_decimal_macros = "1.33"
ndarray = { version = "0.15", optional = true }

# Anomaly Detection (Isolation Forest)
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
statrs = "0.17"
toml = "0.8"

# Data (共享文件格式)
arrow = { version = "53", features = ["json"] }
parquet = { version = "53", features = ["async"] }

# DataFrame (批量数据处理 - 默认启用)
polars = { version = "0.43", features = ["lazy", "rolling_window", "dtype-datetime", "rank", "abs", "log", "cov", "parquet"] }
polars-ops = "0.43"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Monitoring (Phase 19)
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

# Config
config = "0.13"
dotenv = "0.15"

# TUI
ratatui = { version = "0.25", optional = true }
crossterm = { version = "0.27", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
color-eyre = "0.6"
async-trait = "0.1"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# TDX data source (rustdx)
rustdx-complete = "0.6.4"

[features]
default = ["postgresql", "tdengine-rest"]
postgresql = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
tdengine-ws = ["taos-ws"]
tdengine-rest = []
tui = ["ratatui", "crossterm"]

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.8"
wiremock = "0.6"

[[bin]]
name = "quantix"
path = "src/main.rs"

[[bench]]
name = "bench_main"
harness = false

[profile.dev]
debug = 1

[profile.dev.package."*"]
debug = 0

[profile.test]
debug = 1

[profile.test.package."*"]
debug = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
